# fal-ai-playground

./: Dockerfile  README.md  build.sh  docker-build.sh  docker-compose.yml  main.py  pyproject.toml
modules/: __init__.py  common.py  fal_ai_aura_sr.py  fal_ai_flux_dev_image_to_image.py  fal_ai_flux_general_inpainting.py  fal_ai_flux_pro_v1_1_ultra.py  fal_ai_flux_pro_v1_fill.py  fal_ai_flux_schnell.py  flux.py  inpainting.py
